--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "app.js",
   "dependencies": {
     "async": "^0.9.0",
+    "babel": "^4.6.6",
     "babel-core": "^4.3.0",
     "babel-loader": "^4.0.0",
     "bcryptjs": "^2.1.0",
@@ -33,14 +34,12 @@
     "passport-local": "^1.0.0",
     "qs": "^2.3.3",
     "react": "^0.12.1",
-    "react-document-title": "^0.1.3",
-    "react-router": "bobpace/react-router#transitionContext",
+    "react-document-title": "^1.0.2",
+    "react-router": "git://github.com/eiriklv/react-router#transitionContext",
     "superagent": "^0.21.0",
     "transform-loader": "^0.2.1"
   },
   "devDependencies": {
-    "envify": "^1.2.1",
-    "envify-loader": "^0.1.0",
     "fs-extra": "^0.12.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
@@ -66,6 +65,6 @@
   "scripts": {
     "postinstall": "npm run build",
     "build": "gulp build",
-    "start": "node ./build/app.js"
+    "start": "node ./build/start.js"
   }
 }
