--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "main": "app.js",
   "dependencies": {
     "async": "^0.9.0",
+    "babel": "^4.6.6",
     "babel-core": "^4.3.0",
     "babel-loader": "^4.0.0",
     "bcryptjs": "^2.1.0",
     "bluebird": "^2.9.11",
     "body-parser": "^1.9.2",
-    "brfs": "^1.3.0",
     "chokidar": "^1.0.0-rc3",
     "connect-redis": "^2.2.0",
     "convict": "^0.6.1",
@@ -34,13 +34,10 @@
     "qs": "^2.3.3",
     "react": "^0.12.1",
     "react-document-title": "^0.1.3",
-    "react-router": "bobpace/react-router#transitionContext",
-    "superagent": "^0.21.0",
-    "transform-loader": "^0.2.1"
+    "react-router": "git://github.com/eiriklv/react-router#transitionContext",
+    "superagent": "^0.21.0"
   },
   "devDependencies": {
-    "envify": "^1.2.1",
-    "envify-loader": "^0.1.0",
     "fs-extra": "^0.12.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
