--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.10.2",
     "express-session": "^1.10.3",
     "fluxomorph": "git://github.com/eiriklv/fluxomorph",
+    "material-ui": "^0.7.1",
+    "material-ui-sass": "^0.5.3",
     "method-override": "^2.3.1",
     "mongoose": "^3.8.24",
     "morgan": "^1.5.0",
@@ -35,6 +37,7 @@
     "react": "^0.12.1",
     "react-document-title": "^0.1.3",
     "react-router": "git://github.com/eiriklv/react-router#transitionContext",
+    "react-tap-event-plugin": "^0.1.4",
     "superagent": "^0.21.0"
   },
   "devDependencies": {
